Operaciones aritmeticas y estadistica con numpy

--- a/Array en numpy.ipynb
+++ b/Array en numpy.ipynb
@@ -438,6 +438,239 @@
    "source": [
     "ar2[0:3,1]#Tomamos todas las filas y solo mostramos la columna 1 "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 1.])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ar2[2,0:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0.],\n",
+       "       [0., 1., 0.],\n",
+       "       [0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Todos los elementos\n",
+    "ar2[:,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a \t =  [0 1 2 3]\n",
+      "a + 5 \t =  [5 6 7 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#OPERACIONES CON ARRAYS\n",
+    "a=np.arange(4)\n",
+    "print(\"a \\t = \" ,a)\n",
+    "print(\"a + 5 \\t = \",a+5) #Le suma 5 a cada elemento del array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a * 5 \t = [ 0  5 10 15]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"a * 5 \\t =\" ,a*5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.        ,  2.71828183,  7.3890561 , 20.08553692])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0.        , 0.69314718, 1.09861229, 1.38629436])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0.        , 1.        , 1.41421356, 1.73205081])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False, False, False])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#ufuns \n",
+    "a=np.arange(4)\n",
+    "b=np.arange(1,5)\n",
+    "display(a)\n",
+    "display(b)\n",
+    "display(np.exp(a))      #exponencial\n",
+    "display(np.log(b))      #Logaritmo natural\n",
+    "display(np.sqrt(a))     #Raiz cuadrada\n",
+    "display(np.greater(a,b))  #Pregunta cada indice con el otro es mayor\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.5"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4.5"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#Estadistica y aleatoriedad\n",
+    "a=np.arange(10)\n",
+    "display(np.mean(a))#Promedio\n",
+    "display(np.median(a))#Mediana"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.6"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Porcentaje\n",
+    "np.percentile(a,40) #Porcentil"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.76489558, 0.81479592, 0.44759048, 0.44538121, 0.28717247,\n",
+       "       0.63013873, 0.99670573, 0.92795127, 0.66225572, 0.57533058])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.random(10) #Aleatoriedad , cantidad de numeros aleatorios que queremos. Generados entre 0 y 1"
+   ]
   }
  ],
  "metadata": {
