Manejo de datos

--- a/Preparacion_de_Datos.ipynb
+++ b/Preparacion_de_Datos.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -263,13 +263,122 @@
        "4                        143          NaN         7.1          NaN  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "movies.head() # 10 primeros el"
+    "movies.head() # 5 primeros elementos de un DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5043, 19)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies.shape "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['movie_title', 'title_year', 'color', 'aspect_ratio', 'duration',\n",
+       "       'language', 'country', 'duration.1', 'genres', 'content_rating',\n",
+       "       'plot_keywords', 'director_name', 'actor_1_name', 'actor_2_name',\n",
+       "       'actor_3_name', 'cast_total_facebook_likes', 'budget', 'imdb_score',\n",
+       "       'gross'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies.columns #Columnas del dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RangeIndex(start=0, stop=5043, step=1)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Indices del datarfame\n",
+    "movies.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columna1 = movies['movie_title']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                                              Avatar \n",
+       "1            Pirates of the Caribbean: At World's End \n",
+       "2                                             Spectre \n",
+       "3                               The Dark Knight Rises \n",
+       "4    Star Wars: Episode VII - The Force Awakens    ...\n",
+       "Name: movie_title, dtype: object"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "columna1.head() #Nos trae todo lo de esa columna es como el select movie_title from movies;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies.loc[:,'movie_title'] #Todos los registros de la columa movie_tt"
    ]
   }
  ],
