Creacion de listas para las columnas numericas y objeto

--- a/Preparacion_de_Datos.ipynb
+++ b/Preparacion_de_Datos.ipynb
@@ -374,11 +374,276 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                                                 Avatar \n",
+       "1               Pirates of the Caribbean: At World's End \n",
+       "2                                                Spectre \n",
+       "3                                  The Dark Knight Rises \n",
+       "4       Star Wars: Episode VII - The Force Awakens    ...\n",
+       "                              ...                        \n",
+       "5038                             Signed Sealed Delivered \n",
+       "5039                           The Following             \n",
+       "5040                                A Plague So Pleasant \n",
+       "5041                                    Shanghai Calling \n",
+       "5042                                   My Date with Drew \n",
+       "Name: movie_title, Length: 5043, dtype: object"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "movies.loc[:,'movie_title'] #Todos los registros de la columa movie_tt"
+    "movies.loc[:,'movie_title'] #Todos los registros de la columa movie_tittle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                                              Avatar \n",
+       "1            Pirates of the Caribbean: At World's End \n",
+       "2                                             Spectre \n",
+       "3                               The Dark Knight Rises \n",
+       "4    Star Wars: Episode VII - The Force Awakens    ...\n",
+       "Name: movie_title, dtype: object"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies.loc[:,'movie_title'].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                                              Avatar \n",
+       "1            Pirates of the Caribbean: At World's End \n",
+       "2                                             Spectre \n",
+       "3                               The Dark Knight Rises \n",
+       "4    Star Wars: Episode VII - The Force Awakens    ...\n",
+       "5                                         John Carter \n",
+       "Name: movie_title, dtype: object"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies.loc[:5,'movie_title']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 5043 entries, 0 to 5042\n",
+      "Data columns (total 19 columns):\n",
+      " #   Column                     Non-Null Count  Dtype  \n",
+      "---  ------                     --------------  -----  \n",
+      " 0   movie_title                5043 non-null   object \n",
+      " 1   title_year                 4935 non-null   float64\n",
+      " 2   color                      5024 non-null   object \n",
+      " 3   aspect_ratio               4714 non-null   float64\n",
+      " 4   duration                   5028 non-null   float64\n",
+      " 5   language                   5031 non-null   object \n",
+      " 6   country                    5038 non-null   object \n",
+      " 7   duration.1                 5028 non-null   float64\n",
+      " 8   genres                     5043 non-null   object \n",
+      " 9   content_rating             4740 non-null   object \n",
+      " 10  plot_keywords              4890 non-null   object \n",
+      " 11  director_name              4939 non-null   object \n",
+      " 12  actor_1_name               5036 non-null   object \n",
+      " 13  actor_2_name               5030 non-null   object \n",
+      " 14  actor_3_name               5020 non-null   object \n",
+      " 15  cast_total_facebook_likes  5043 non-null   int64  \n",
+      " 16  budget                     4551 non-null   float64\n",
+      " 17  imdb_score                 5043 non-null   float64\n",
+      " 18  gross                      4159 non-null   float64\n",
+      "dtypes: float64(7), int64(1), object(11)\n",
+      "memory usage: 748.7+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "movies.info() #Arroja el tipo de la columna y cuantos campos no nulos tiene, se hace para entender los datos mejor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "movie_title                   object\n",
+       "title_year                   float64\n",
+       "color                         object\n",
+       "aspect_ratio                 float64\n",
+       "duration                     float64\n",
+       "language                      object\n",
+       "country                       object\n",
+       "duration.1                   float64\n",
+       "genres                        object\n",
+       "content_rating                object\n",
+       "plot_keywords                 object\n",
+       "director_name                 object\n",
+       "actor_1_name                  object\n",
+       "actor_2_name                  object\n",
+       "actor_3_name                  object\n",
+       "cast_total_facebook_likes      int64\n",
+       "budget                       float64\n",
+       "imdb_score                   float64\n",
+       "gross                        float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies.dtypes #Arroja los tipos de datos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "movie_title                  False\n",
+       "title_year                    True\n",
+       "color                        False\n",
+       "aspect_ratio                  True\n",
+       "duration                      True\n",
+       "language                     False\n",
+       "country                      False\n",
+       "duration.1                    True\n",
+       "genres                       False\n",
+       "content_rating               False\n",
+       "plot_keywords                False\n",
+       "director_name                False\n",
+       "actor_1_name                 False\n",
+       "actor_2_name                 False\n",
+       "actor_3_name                 False\n",
+       "cast_total_facebook_likes    False\n",
+       "budget                        True\n",
+       "imdb_score                    True\n",
+       "gross                         True\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies.dtypes == float #Compara cada uno de los datos sin necesidad de un for "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "movie_title                  False\n",
+       "title_year                    True\n",
+       "color                        False\n",
+       "aspect_ratio                  True\n",
+       "duration                      True\n",
+       "language                     False\n",
+       "country                      False\n",
+       "duration.1                    True\n",
+       "genres                       False\n",
+       "content_rating               False\n",
+       "plot_keywords                False\n",
+       "director_name                False\n",
+       "actor_1_name                 False\n",
+       "actor_2_name                 False\n",
+       "actor_3_name                 False\n",
+       "cast_total_facebook_likes    False\n",
+       "budget                        True\n",
+       "imdb_score                    True\n",
+       "gross                         True\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Aritmetica de booleanos - | = or\n",
+    "(movies.dtypes == float) | (movies.dtypes == int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['movie_title', 'color', 'language', 'country', 'genres', 'content_rating', 'plot_keywords', 'director_name', 'actor_1_name', 'actor_2_name', 'actor_3_name', 'cast_total_facebook_likes']\n",
+      "['title_year', 'aspect_ratio', 'duration', 'duration.1', 'budget', 'imdb_score', 'gross']\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = (movies.dtypes == float) | (movies.dtypes == int)\n",
+    "#print(num[0])\n",
+    "colum_numeric=list()\n",
+    "\n",
+    "colum_str=list()\n",
+    "for llave,valor in num.items():#Lo leemos como diccionario donde la llave es la columna y el valor es true si es int or float\n",
+    "    if valor == True:\n",
+    "        colum_numeric.append(llave)\n",
+    "    else:\n",
+    "        colum_str.append(llave)\n",
+    "        \n",
+    "print(colum_str)\n",
+    "print(colum_numeric)"
    ]
   }
  ],
